--- a/src/Gallery/GalleryPopup.css
+++ b/src/Gallery/GalleryPopup.css
@@ -11,7 +11,7 @@
 }
 
 .GalleryPopup-content{
-    max-width: 1310px;
+    max-width: fit-content;
     max-height: 1200px;
     width: calc(100% - 20px);
     height: calc(100% - 20px);
@@ -19,6 +19,7 @@
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
+    overflow: hidden;
 }
 
 .GalleryPopup-closeIcon{
@@ -26,7 +27,7 @@
     height: 24px;
     top: 10px;
     left: calc(100% - 34px);
-    position: relative;
+    position: absolute;
     z-index: 99;
     cursor: pointer;
 }
@@ -34,7 +35,7 @@
 .GalleryPopup-image{
     width: auto;
     height: 100%;
-    position: absolute;
+    position: relative;
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
